[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/font/Chalkduster_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/cat_model.svg" type="Texture" id=2]
[ext_resource path="res://game/back_to_title.gd" type="Script" id=3]

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 300.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -639.15
margin_top = -360.425
margin_right = 640.85
margin_bottom = 359.575
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 288.0
margin_top = 155.0
margin_right = 991.0
margin_bottom = 565.0
custom_constants/line_spacing = 8
text = "Willing Cat is a game made for TFG Videogames, part of Multimedia Degree at Universitat Oberta de Catalunya
License Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Spain (CC BY-NC-ND 3.0 ES) 


Art, animation & programming
Sergi Castejon Arias


Music
Alexandr Zhelanov
License Attribution 4.0 International (CC BY 4.0) 

Music Tracks
Inevitability, Neon Transit, Sherlock Holmes Case, Long Night Drive, Magic of North
Alexandr Zhelanov Youtube Channel: Alexandr Zhelanov's Music



Thank you for playing"
align = 1

[node name="credits_exit" type="Button" parent="."]
margin_right = 144.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="credits_exit" to="." method="_on_credits_exit_pressed"]
