[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/font/Chalkduster_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/skin2.png" type="Texture" id=2]
[ext_resource path="res://game/back_to_title.gd" type="Script" id=3]

[node name="Instructions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -491.5
margin_top = -259.56
margin_right = 523.5
margin_bottom = 322.44
custom_fonts/font = ExtResource( 1 )
text = "Controls:
Jump > Spacebar
Pause > Esc

Instructions:
Avoid black color traps at all cost,
once you touch a trap the cat dies.
There are 10 stars in each level,
try to get them all."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="TextureRect"]
margin_right = 144.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureRect/back" to="." method="_on_back_pressed"]
