[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/back_to_title.gd" type="Script" id=1]
[ext_resource path="res://Assets/font/Chalkduster_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/sound_box.gd" type="Script" id=3]
[ext_resource path="res://Assets/icono_musica.png" type="Texture" id=4]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.26697
margin_top = 0.844604
margin_right = -1.26697
margin_bottom = 0.844604
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 535.0
margin_top = 163.0
margin_right = 744.0
margin_bottom = 556.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 209.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.560784, 0.537255, 0.870588, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Options
"
align = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 209.0
margin_bottom = 193.0
custom_fonts/font = ExtResource( 2 )
text = "Sound"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 209.0
margin_bottom = 229.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 233.0
margin_right = 209.0
margin_bottom = 249.0
min_value = -80.0
max_value = 0.0
script = ExtResource( 3 )

[node name="credits" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 209.0
margin_bottom = 321.0
custom_fonts/font = ExtResource( 2 )
text = "Credits"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 209.0
margin_bottom = 393.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HSlider" to="CenterContainer/VBoxContainer/HSlider" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
